ecmascript/parser/tests/typescript-errors/class/input.ts.stderr
error: Unexpected token Some(QuestionMark)
 --> $DIR/tests/typescript-errors/class/input.ts:2:4
  |
2 |   x?!: number;
  |    ^

